--- a/style.css
+++ b/style.css
@@ -3,6 +3,13 @@ body{
     font-family: Roboto, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
+/* Temporal */
+.div-work{
+    border: 5px solid red;
+}
+
+
+
 a, .secondary{
     text-decoration: none;
     font-size: 18px;
@@ -28,7 +35,7 @@ a, .secondary{
 
 .sup{
     justify-content: space-between;
-    margin-bottom: 100px;
+    margin-bottom: 80px;
     align-items: center;
 }
 
@@ -49,12 +56,6 @@ ul{
     margin: 0;
     display: flex;
     gap: 16px;
-}
-
-img{
-    height: 50px;
-    width: 50px;
-    border: 5px solid red;
 }
 
 #left-inf{
@@ -89,13 +90,49 @@ img{
 
 .blue-button{
     padding: 4px 32px;
-    background-color: rgb(13,110,253);
+    background-color: #3882F6;
     color: white;
     border-radius: 8px;
     border: none;
     font-weight: bold;
     font-size: 16px;
     align-items: center;
+}
+
+
+/* information Part CSS */
+.information, .img-text{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    flex-wrap: wrap;
+}
+
+.information-header{
+    font-size: 36px;
+    font-weight: 800px;
+    color: #1F2937;
+}
+
+.img-text img{
+    border-radius: 12px;
+}
+
+img{
+    height: 140px;
+    width: 140px;
+    border: 4px solid #3882F6;;
+}
+
+.imgs{
+    display: flex;
+    gap: 52px;
+
+}
+
+.img-text{
+    width: 200px;
+    color: gray;
 }
 
 /* Footer CSS */
