--- a/style.css
+++ b/style.css
@@ -106,6 +106,8 @@ ul{
     flex-direction: column;
     align-items: center;
     flex-wrap: wrap;
+    padding-top: 20px;
+    padding-bottom: 40px;
 }
 
 .information-header{
@@ -133,6 +135,40 @@ img{
 .img-text{
     width: 200px;
     color: gray;
+}
+
+/* Quote CSS */
+.quote{
+    background-color: #E5E7EB;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding-top: 24px;
+    padding-bottom: 60px;
+}
+
+blockquote{
+    width: 900px;
+    font-size: 36px;
+    font-style: italic;
+    color: dimgray;
+    margin-bottom: 0;
+}
+
+blockquote p{
+    margin-bottom: 0;
+}
+
+.autor{
+    width: 900px;
+    display: flex;
+    justify-content: end;
+    font-size: 32px;
+}
+
+.autor p{
+    margin-top: 0;
 }
 
 /* Footer CSS */
